# routes/tenant.php
@@ -93,6 +93,7 @@ Route::prefix('tenant')->group(function (): void {
         Route::get('payments', [PaymentController::class, 'index'])->name('tenant.payments.index');
         Route::post('payments', [PaymentController::class, 'store'])->name('tenant.payments.store');
         Route::get('payments/{paymentTransaction}', [PaymentController::class, 'show'])->name('tenant.payments.show');
+        Route::post('payments/{paymentTransaction}/verify', [PaymentController::class, 'verify'])->name('tenant.payments.verify');
         Route::post('payments/{paymentTransaction}/complete', [PaymentController::class, 'complete'])->name('tenant.payments.complete');
         Route::post('payments/{paymentTransaction}/fail', [PaymentController::class, 'fail'])->name('tenant.payments.fail');
 
